force-app/main/default/objects/SecurityToken__c/SecurityToken__c.object-meta.xml
<CustomObject>
    <label>SecurityToken</label>
    <nameField>
        <label>SecurityTokens Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SecurityTokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>