force-app/main/default/objects/SecurityToken__c/fields/ExternalUser__c.field-meta.xml
<CustomField>
    <fullName>ExternalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ExternalUser</label>
    <referenceTo>ExternalUser__c</referenceTo>
    <relationshipLabel>SecurityTokens</relationshipLabel>
    <relationshipName>SecurityTokens</relationshipName>
    <type>Lookup</type>
</CustomField>