force-app/main/default/objects/SecurityToken__c/fields/RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>RefreshToken__c</fullName>
    <label>RefreshToken</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>